# netlifter

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt
benchmarks/popeye/: CMakeLists.txt  readme.txt  regression.sh  ssq.bc
include/BNF/: BNF.h  Bound.h
include/Core/: DistinctMetadataAnalysis.h  DomInformationAnalysis.h  ExecutionState.h  Executor.h  FSM.h  FunctionMap.h  LoopInformationAnalysis.h  LoopSummaryAnalysis.h  LoopSummaryState.h  LoopSummaryStateMachine.h  PLang.h  SliceGraph.h  SymbolicExecution.h  SymbolicExecutionTree.h
include/Memory/: AbstractValue.h  GlobalMemoryBlock.h  HeapMemoryBlock.h  MemoryBlock.h  MessageBuffer.h  StackMemoryBlock.h
include/MustAA/: LocalMustAliasAnalysis.h  XGraph.h  XNode.h  XValue.h
include/Support/: ADT.h  AutoClose.h  AutoRelease.h  DL.h  Debug.h  DisjointSet.h  Dot.h  InstructionVisitor.h  PushPop.h  RandomUInt64Generator.h  TimeRecorder.h  VSpell.h  Z3.h
include/Transform/: LowerConstantExpr.h  LowerGlobalConstantArraySelect.h  LowerSelect.h  MergeReturn.h  NameBlock.h  RemoveDeadBlock.h  RemoveIrreducibleFunction.h  RemoveNoRetFunction.h  SimplifyLatch.h
lib/: CMakeLists.txt
lib/BNF/: BNF.cpp  BNFPrint.cpp  BNFSimplify.cpp  Bound.cpp  CMakeLists.txt
lib/Core/: CMakeLists.txt  DistinctMetadataAnalysis.cpp  DomInformationAnalysis.cpp  ExecutionState.cpp  Executor.cpp  ExecutorLib.cpp  ExecutorStrLib.cpp  FSM.cpp  FunctionMap.cpp  LoopInformationAnalysis.cpp  LoopSummaryAnalysis.cpp  LoopSummaryState.cpp  LoopSummaryStateMachine.cpp  PLang.cpp  SliceGraph.cpp  SymbolicExecution.cpp  SymbolicExecutionTree.cpp
lib/Memory/: AbstractValue.cpp  CMakeLists.txt  GlobalMemoryBlock.cpp  HeapMemoryBlock.cpp  MemoryBlock.cpp  MessageBuffer.cpp  StackMemoryBlock.cpp
lib/Support/: CMakeLists.txt  DL.cpp  Debug.cpp  Dot.cpp  RandomUInt64Generator.cpp  VSpell.cpp  Z3.cpp  Z3Arithmetic.cpp  Z3Byte.cpp  Z3Cast.cpp  Z3Logic.cpp  Z3Macro.h  Z3Relational.cpp  Z3Simplify.cpp  Z3Ternary.cpp
lib/Transform/: CMakeLists.txt  LowerConstantExpr.cpp  LowerGlobalConstantArraySelect.cpp  LowerSelect.cpp  MergeReturn.cpp  NameBlock.cpp  RemoveDeadBlock.cpp  RemoveIrreducibleFunction.cpp  RemoveNoRetFunction.cpp  SimplifyLatch.cpp
tools/: CMakeLists.txt
tools/popeye/: CMakeLists.txt  LiftingPass.cpp  LiftingPass.h  popeye.cpp
