add_library(PPYSupport STATIC
        Debug.cpp
        DL.cpp
        Dot.cpp
        RandomUInt64Generator.cpp
        VSpell.cpp
        Z3.cpp
        Z3Arithmetic.cpp
        Z3Byte.cpp
        Z3Cast.cpp
        Z3Logic.cpp
        Z3Relational.cpp
        Z3Simplify.cpp
        Z3Ternary.cpp
        )